# zkp_auth

./: Cargo.toml  README.md  docker-compose.yml
aws/: cdk.json  package-lock.json  package.json
aws/lib/: zkp-auth-cdk-stack.ts
aws/test/: zkp-auth-cdk-stack.test.ts
client/: Cargo.toml  Dockerfile
client/src/: main.rs
client/src/auth/: auth.rs  client.rs  dl.rs  ec.rs  mod.rs
crypto/: Cargo.toml
crypto/src/: context.rs  lib.rs  prover.rs  util.rs  verifier.rs
crypto/src/dl/: mod.rs  params.rs  prover.rs  verifier.rs
crypto/src/ec/: mod.rs  params.rs  prover.rs  verifier.rs
crypto/src/exp/: mod.rs  params.rs  prover.rs  verifier.rs
proto/: Cargo.toml  build.rs  zkp_auth.proto
proto/src/: lib.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/auth/: auth.rs  conversion.rs  dl.rs  ec.rs  mod.rs  proto.rs  server.rs
tests/: Cargo.toml
tests/tests/: cli_integration_test.rs  integration_test.rs
util/: Cargo.toml
util/src/: codec.rs  lib.rs  params.rs
