[workspace]
resolver = "2"
members = ["crypto", "client", "server", "proto", "util"]
exclude = []

[workspace.dependencies]
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.0", features = ["v4"] }

[workspace.metadata.commands]
client = { cmd = "run --package client --bin client", args = ["username", "auth_algo", "port"] }
server = { cmd = "run --package server --bin server", args = ["port"] }